@@ -196,7 +196,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
     public int getRecoveryCounter(){
         String p = properties.getProperty("recoveryCounter");
         if(p != null){
-            return new Integer(p).intValue();
+            return Integer.valueOf(p).intValue();
         }
         return -1;
     }
@@ -220,7 +220,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
     public long getRecoverySleepTime(){
         String p = properties.getProperty("recoverySleepTime");
         if(p != null){
-            return new Long(p).longValue();
+            return Long.valueOf(p).longValue();
         }
         return -1;
     }
@@ -239,7 +239,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
 
     public int getPort() {
         String p = properties.getProperty("mcastPort");
-        return new Integer(p).intValue();
+        return Integer.valueOf(p).intValue();
     }
 
     public void setFrequency(long time) {
@@ -248,7 +248,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
 
     public long getFrequency() {
         String p = properties.getProperty("mcastFrequency");
-        return new Long(p).longValue();
+        return Long.valueOf(p).longValue();
     }
 
     public void setMcastDropTime(long time) {
@@ -260,7 +260,7 @@ public class McastService implements MembershipService,MembershipListener,Messag
 
     public long getDropTime() {
         String p = properties.getProperty("memberDropTime");
-        return new Long(p).longValue();
+        return Long.valueOf(p).longValue();
     }
 
     /**
