@@ -541,7 +541,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                 throw new ExecutionException(sm.getString(
                         "asyncChannelWrapperSecure.tooBig", result), null);
             }
-            return new Integer(result.intValue());
+            return Integer.valueOf(result.intValue());
         }
 
         @Override
@@ -553,7 +553,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                 throw new ExecutionException(sm.getString(
                         "asyncChannelWrapperSecure.tooBig", result), null);
             }
-            return new Integer(result.intValue());
+            return Integer.valueOf(result.intValue());
         }
     }
 
